--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "three-effectcomposer": "0.0.1"
   },
   "scripts": {
     "build": "webpack",
