--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "three": "^0.84.0",
     "three-effectcomposer": "0.0.1"
   },
   "scripts": {
