--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.3.14",
     "ramda": "^0.23.0",
+    "ramda-fantasy": "^0.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
